; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_arith.c_test_unary.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_arith.c_test_unary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_unary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_unary() #0 {
  %1 = alloca i8, align 1
  %2 = alloca i16, align 2
  %3 = alloca i32, align 4
  store i8 2, i8* %1, align 1
  store i16 2, i16* %2, align 2
  store i32 2, i32* %3, align 4
  %4 = load i8, i8* %1, align 1
  %5 = sext i8 %4 to i32
  %6 = sub nsw i32 0, %5
  %7 = call i32 @expect(i32 -2, i32 %6)
  %8 = load i16, i16* %2, align 2
  %9 = sext i16 %8 to i32
  %10 = sub nsw i32 0, %9
  %11 = call i32 @expect(i32 -2, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = sub nsw i32 0, %12
  %14 = call i32 @expect(i32 -2, i32 %13)
  ret void
}

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
